3608
I came across this variant while porting some code to 2.8.  In RC3 and r22181:
{code}
scala> val a = Array(1,2,3)               
a: Array[Int] = Array(1, 2, 3)

scala> def x(a: Seq[Int]): Seq[Int] = a   
x: (a: Seq[Int])Seq[Int]

scala> x(a)                               
res0: Seq[Int] = WrappedArray(1, 2, 3)

scala> x(a.toArray)                    
<console>:8: error: scala is not an enclosing class
       x(a.toArray)
         ^
{code}
